# Readmysaju_api_mvp

./: .gitignore  README.md  base.ipynb  pyproject.toml  requirements.txt  test_deepeval.py  test_request.py
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt
metrics/: saju_metrics.py
src/: __init__.py  api.py  chat.py  main.py  test_api_validation.py
