[tool.poetry]
name = "readmysaju_chat"
version = "0.1.0"
description = "사주 챗봇 프로젝트"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
openai = "*"
gradio = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 